--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,25 @@ on:
     branches: ['main']
 
 jobs:
+  test:
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres:12
+        # Provide the password for postgres
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: simplebank
+
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
   build:
     runs-on: ubuntu-latest
     steps:
@@ -16,6 +35,9 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.20'
+
+      - name: Run migrations
+        run: make migrateup
 
       - name: Build
         run: go build -v ./...
