--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,9 @@ on:
 
 jobs:
   test:
+    name: Test
+    runs-on: ubuntu-latest
+
     services:
       # Label used to access the service container
       postgres:
