--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,21 +29,21 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
-  build:
-    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.20'
-
       - name: Run migrations
-        run: make migrateup
+              run: make migrateup
+      - name: Test
+              run: make test
 
+  build:
+    runs-on: ubuntu-latest
+    steps:
       - name: Build
         run: go build -v ./...
 
-      - name: Test
-        run: make test
+      
