--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,8 @@ jobs:
           go-version: '1.20'
       - name: Install golang migrate
         run: |
-          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.linux-amd64.tar.gz | tar xz -C migrate.linux-amd64
-          sudo mv migrate.linux-amd64 /usr/bin/migrate
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.linux-amd64.tar.gz | tar xzv
+          sudo mv migrate /usr/bin
           which migrate
       - name: Run migrations
         run: make migrateup
